--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@auth0/angular-jwt": "^3.0.0",
     "angular-imask": "^5.1.8",
     "angular-in-memory-web-api": "^0.8.0",
     "bootstrap": "^4.3.1",
@@ -26,6 +27,7 @@
     "currency-formatter": "^1.5.4",
     "g": "^2.0.1",
     "jquery": "^3.4.1",
+    "mdbootstrap": "^4.8.10",
     "moment": "^2.24.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
