--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
     "@angular/material": "^8.2.2",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
